--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </nav>
         </div>
         <div class="header__right-block">
-            <button data-modal class="btn btn_white">Связаться с нами</button>
+            <button data-modal class="data-modal btn btn_white">Связаться с нами</button>
         </div>
     </header>
     <div class="sidepanel">
@@ -63,7 +63,7 @@
                 <div class="tabheader">
                     <h3>Выберите стиль питания</h3>
                     <div class="tabheader__items">
-                        <div class="tabheader__item tabheader__item_active">Фитнес</div>
+                        <div class="tabheader__item">Фитнес</div>
                         <div class="tabheader__item">Премиум</div>
                         <div class="tabheader__item">Постное</div>
                         <div class="tabheader__item">Сбалансированное</div>
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="offer__action">
-                <button data-modal class="btn btn_dark">Связаться с нами</button>
+                <button data-modal class="data-modal btn btn_dark">Связаться с нами</button>
             </div>
         </div>
         <div class="container">
@@ -185,6 +185,7 @@
 
         <div class="menu__field">
             <div class="container">
+
             </div>
         </div>
     </div>
@@ -261,7 +262,7 @@
         <div class="modal__dialog">
             <div class="modal__content">
                 <form action="#">
-                    <div data-close class="modal__close">&times;</div>
+                    <div data-close class="data-close modal__close">&times;</div>
                     <div class="modal__title">Мы свяжемся с вами как можно быстрее!</div>
                     <input required placeholder="Ваше имя" name="name" type="text" class="modal__input">
                     <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="modal__input">
