--- a/index.html
+++ b/index.html
@@ -102,29 +102,31 @@
             </div>
             <div class="offer__slider">
                 <div class="offer__slider-counter">
-                    <div class="offer__slider-prev">
+                    <div data-prev class="offer__slider-prev">
                         <img src="icons/left.svg" alt="prev">
                     </div>
-                    <span id="current">03</span>
+                    <span id="current"></span>
                     /
-                    <span id="total">04</span>
-                    <div class="offer__slider-next">
+                    <span id="total"></span>
+                    <div data-next class="offer__slider-next">
                         <img src="icons/right.svg" alt="next">
                     </div>
                 </div>
                 <div class="offer__slider-wrapper">
-                    <div class="offer__slide">
-                        <img src="img/slider/pepper.jpg" alt="pepper">
+                    <div class="offer__slider-inner">
+                        <div class="offer__slide">
+                            <img src="img/slider/pepper.jpg" alt="pepper">
+                        </div>
+                        <div class="offer__slide">
+                            <img src="img/slider/food-12.jpg" alt="food">
+                        </div>
+                        <div class="offer__slide">
+                            <img src="img/slider/olive-oil.jpg" alt="oil">
+                        </div>
+                        <div class="offer__slide">
+                            <img src="img/slider/paprika.jpg" alt="paprika">
+                        </div>
                     </div>
-                    <!-- <div class="offer__slide">
-                        <img src="img/slider/food-12.jpg" alt="food">
-                    </div>
-                    <div class="offer__slide">
-                        <img src="img/slider/olive-oil.jpg" alt="oil">
-                    </div>
-                    <div class="offer__slide">
-                        <img src="img/slider/paprika.jpg" alt="paprika">
-                    </div> -->
                 </div>
             </div>
         </div>
